<resources>
    <string name="app_name">MotoMeet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Stwórz konto</string>
    <string name="nav_open">Otwórz</string>
    <string name="nav_close">Zamknij</string>
    <!--<string name="my_map_api_key">AIzaSyAd6SQFWjbAvCWqVpy005-A-X1Tfd5e9V4</string>-->
    <string name="loginTitle">Logowanie</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Hasło</string>
    <string name="forgotPasswordTXT">Zapomniałes hasła?</string>
    <string name="signInTXT">Zaloguj się</string>
    <string name="signUpTXT">Zarejestruj się</string>
    <string name="nameHint">Imię</string>
    <string name="confirmPasswordHint">Potwierdź hasło</string>
    <string name="returnTXT">Powrót</string>
    <string name="addPhotoDescHint">Dodaj opis do zdjęcia</string>
    <string name="chatHint">Pisz tutaj…</string>
    <string name="statusTV">Online</string>
    <string name="nameTV">Nazwa użytkownika</string>
    <string name="messagesTV">Wiadomości</string>
    <string name="searchHint">Szukaj…</string>
    <string name="fuelCostTV">Koszt paliwa: </string>
    <string name="entryDateTV">Data wpisu: </string>
    <string name="highwayCostTV">Koszt autostrad: </string>
    <string name="additionalCostTV">Koszty dodatkowe: </string>
    <string name="commentHint">Napisz komentarz</string>
    <string name="costJournalTitle">Dziennik kosztów</string>
    <string name="costJournalEntryTitle">Wpis do książki</string>
    <string name="addEntryBtn">Dodaj wpis</string>
    <string name="fuelCostHint">koszt paliwa</string>
    <string name="highwayCostHint">Koszt autostrad</string>
    <string name="additionalCostHint">Koszty dodatkowe</string>
    <string name="followingTV">Obserwowani</string>
    <string name="followersTV">Obserwujący</string>
    <string name="postsTV">Posty</string>
    <string name="sendMessageTV">Wyślij wiadomość</string>
    <string name="followBtn">Obserwuj</string>
    <string name="passwordRecoveryTitle">Odzyskiwanie hasła</string>
    <string name="recoverBtn">Odzyskaj</string>
    <string name="serviceBookEntryTitle">Wpis do książki</string>
    <string name="serviceNameTV">Nazwa przeglądu: </string>
    <string name="serviceNameHint">nazwa przeglądu</string>
    <string name="serviceDescriptionTV">Szczegółowy opis: </string>
    <string name="serviceDescriptionHint">opis przeglądu</string>
    <string name="serviceCostTV">Koszt przeglądu: </string>
    <string name="serviceCostHint">koszt przeglądu</string>
    <string name="doneServicesTV">Wykonane czynności serwisowe: </string>
    <string name="oilSwitch">Olej</string>
    <string name="oilFilterSwitch">Filtr oleju</string>
    <string name="sparkPlugsSwitch">Świece zapłonowe</string>
    <string name="driveUnitSwitch">Konserwacja zespołu napędowego</string>
    <string name="valveClearanceSwitch">Regulacja luzu zaworowego</string>
    <string name="breakFluidSwitch">Płyn hamulcowy</string>
    <string name="serviceBookTitle">Książka serwisowa</string>
    <string name="postTimeTV">czas dodania</string>
    <string name="postDescriptionTV">Opis</string>
    <string name="likeCountTV">polubień</string>
    <string name="navDrawerTitle">Menu</string>
    <string name="serviceBookNav">Książka serwisowa</string>
    <string name="costJournalNav">Dziennik kosztów</string>
    <string name="meetingsNav">Spotkania</string>
    <string name="logoutNav">Wyloguj</string>
    <string name="routeNameHint">Nazwa trasy</string>
    <string name="routeDescHint">Opis trasy</string>
    <string name="clearMapBtn">Wyczyść mapę</string>
    <string name="addRouteBtn">Dodaj Trasę</string>
    <string name="addRouteTitle">Dodaj trasę</string>
    <string name="addText">Dodaj</string>
    <string name="meetingDateHint">data spotkania</string>
    <string name="meetingDateTV">Data spotkania: </string>
    <string name="meetingDescHint">opis spotkania</string>
    <string name="meetingDescTV">Opis spotkania: </string>
    <string name="meetingNameHint">nazwa spotkania</string>
    <string name="meetingNameTV">Nazwa spotkania: </string>
    <string name="addMeetingTitle">Dodaj spotkanie</string>
    <string name="placeNameHint">nazwa miejsca</string>
    <string name="placeDescHint">opis miejsca</string>
    <string name="addPlaceTV">Dodaj miejsce</string>
    <string name="meetingsTitle">Spotkania</string>
    <string name="returnBtnContDesc">return</string>
    <string name="addEntryBtnContDesc">add entry</string>
    <string name="googleMapContDesc">google map</string>
    <string name="sendMessageContDesc">send message</string>
    <string name="clearBtn">Wyczyść</string>
    <string name="routesTitle">Trasy</string>
    <string name="placesTitle">Interesujące miejsca</string>
    <string name="postImgContDesc">post image</string>
    <string name="commentContDesc">comment</string>
    <string name="placeNameTV">Nazwa miejsca:</string>
    <string name="placeDescTV">Opis miejsca:</string>
    <string name="distanceTV">Odległość:</string>
    <string name="placesNav">Interesujące miejsca</string>
    <string name="routesNav">Trasy</string>
    <string name="routeNameTV">Nazwa trasy:</string>
    <string name="routeDescTV">Szczegółowy opis:</string>
    <string name="routeLengthTV">Długość trasy:</string>
    <string name="unfollowBtn">Odobserwuj</string>
    <string name="routeDistanceToUserTV">Odległość do trasy:</string>
</resources>