<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateAccountFragment"
    android:background="@color/grey">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="48sp"
        android:text="@string/create_account"
        android:textColor="@color/red"
        android:layout_marginTop="78dp"
        android:layout_marginStart="16dp"/>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/nameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_margin="8dp"
            android:background="@drawable/text_box"
            android:hint="@string/nameHint"/>

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_margin="8dp"
            android:background="@drawable/text_box"
            android:hint="@string/emailHint"/>

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_margin="8dp"
            android:background="@drawable/text_box"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/confirmPasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_margin="8dp"
            android:background="@drawable/text_box"
            android:hint="@string/confirmPasswordHint"
            android:inputType="textPassword"/>

    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linear1"
        android:layout_above="@+id/signUpBtn"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUpTXT"
        android:background="@drawable/button_background"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="#fff"
        android:layout_above="@id/loginTV"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/loginTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:text="@string/returnTXT"
        android:textStyle="bold"
        android:textColor="@color/red"/>

</RelativeLayout>