<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment"
    android:background="@color/grey">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="48sp"
        android:text="@string/loginTitle"
        android:textColor="@color/red"
        android:layout_marginTop="78dp"
        android:layout_marginStart="40dp"/>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="10dp">

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_margin="8dp"
            android:background="@drawable/text_box"
            android:hint="@string/emailHint"
            android:textColor="@color/white"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_margin="8dp"
            android:background="@drawable/text_box"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/forgotPassTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotPasswordTXT"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear1"
        android:layout_above="@+id/signInBtn"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/signInTXT"
        android:background="@drawable/button_background"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_below="@id/linear1"
        android:layout_marginBottom="16dp"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/signUpTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/signUpTXT"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:layout_below="@id/signInBtn"/>

</RelativeLayout>