<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    android:background="@color/grey">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:background="@color/red"
        android:elevation="2dp"
        android:layout_alignParentTop="true"
        app:contentInsetStart="0dp"
        app:contentInsetEnd="0dp"
        android:layout_marginBottom="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/returnBtn"
                android:layout_width="@dimen/circleBtnWidth"
                android:layout_height="@dimen/circleBtnHeight"
                android:layout_alignParentStart="true"
                android:layout_margin="4dp"
                android:background="@drawable/baseline_circle_24"
                android:elevation="3dp"
                android:padding="4dp"
                android:src="@drawable/baseline_arrow_back_24"
                android:layout_centerVertical="true"
                android:contentDescription="@string/returnBtnContDesc" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/addMeetingTitle"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:layout_below="@id/toolbar">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/meetingNameET"
            android:layout_marginBottom="8dp"
            android:hint="@string/meetingNameHint"
            android:inputType="text"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/meetingDescriptionET"
            android:layout_marginBottom="8dp"
            android:hint="@string/meetingDescHint"
            android:inputType="text"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/meetingDateET"
            android:layout_marginBottom="8dp"
            android:hint="@string/meetingDateHint"
            android:inputType="date"/>

        <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mapMeeting"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addEntryBtn"
            android:text="@string/addText"
            android:background="@drawable/button_background"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

</RelativeLayout>