<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">

    <RelativeLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/grey">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="@dimen/prof_img_width"
            android:layout_height="@dimen/prof_img_height"
            android:layout_centerVertical="true"
            android:src="@color/red"
            app:civ_border_color="@color/material_blue_grey_80"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/profileImage"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameTV"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/statusTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statusTV"
                android:textSize="12sp"
                android:textColor="@color/red"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/chatLayout"
        android:layout_below="@id/topLayout"
        android:layout_margin="8dp" />

    <RelativeLayout
        android:id="@+id/chatLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="6dp">

        <EditText
            android:id="@+id/chatET"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:background="@drawable/text_box"
            android:backgroundTint="@color/material_blue_grey_80"
            android:hint="@string/chatHint"
            android:layout_marginEnd="4dp"
            android:layout_toStartOf="@id/sendBtn"
            android:padding="12dp"
            android:inputType="text"/>

        <ImageView
            android:id="@+id/sendBtn"
            android:layout_width="@dimen/circleBtnWidth"
            android:layout_height="@dimen/circleBtnHeight"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/baseline_circle_24"
            android:padding="8dp"
            android:src="@drawable/baseline_send_24"
            android:contentDescription="@string/sendMessageContDesc" />

    </RelativeLayout>

</RelativeLayout>